一系列样式优化

--- a/src/app/pages/Blog/index.scss
+++ b/src/app/pages/Blog/index.scss
@@ -1,6 +1,7 @@
 .blog-header {
   opacity: 0;
   color: #2C2C2C;
+  // position: fixed;
   transform: translateY(-3.5rem);
   &.onscroll {
     opacity: .9;
