--- a/src/app/pages/Blog/index.scss
+++ b/src/app/pages/Blog/index.scss
@@ -1,7 +1,8 @@
 .blog-header {
   opacity: 0;
   color: #2C2C2C;
-  // position: fixed;
+  position: relative;
+  position: fixed;
   transform: translateY(-3.5rem);
   &.onscroll {
     opacity: .9;
